--- a/css/style.css
+++ b/css/style.css
@@ -191,7 +191,7 @@ img{
 .contact-tel:focus .smartphone {
     fill: #2196F3;} */
 /* --------------------------title-------------------------------- */
-.title{
+/* .title{
     background-image: linear-gradient(rgba(47, 48, 58, 0.4),
     rgba(47, 48, 58, 0.4)), url(../images/phototitle.jpg);
     background-color: #C4C4C4;
@@ -249,9 +249,9 @@ img{
 .btn:hover,
 .btn:focus{
     background-color: #188ce8;
-}
+} */
 /* ----------------------------BENEFITS--------------------------- */
-.benefits{ 
+/* .benefits{ 
     background-color:var(--second-color);
     padding-top: 94px;
     padding-bottom: 94px;
@@ -262,7 +262,7 @@ img{
     gap: 30px;
 }
 
-.text{}
+
 
 .caption{
     position: absolute;
@@ -294,8 +294,6 @@ img{
     flex-basis: calc((100%-90px)/4);
 }
 
-.icons-group{}
-
 .item-header{
     font-size: 14px;
     line-height: 1.14;
@@ -308,9 +306,9 @@ img{
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: var(--color-item-tel-mail);
-}
+} */
 /* ----------------------------WORK--------------------------------- */
-.works{
+/* .works{
     background-color: var(--second-color);
     padding-bottom: 94px;
 }
@@ -357,8 +355,6 @@ img{
     color: #FFFFFF;
     padding-top: 27px;
 }
-
-.work-out-team{}
 
 .work-team{
     list-style:var(--point) ;
@@ -447,9 +443,9 @@ img{
 
 .networks-player-element:focus .social-networks{
     fill: #ffffff;
-}
+} */
 /* ------------------------clients-------------------------- */
-.clients{
+/* .clients{
     padding-top: 94px;
     padding-bottom: 94px;
 }
@@ -504,9 +500,9 @@ img{
 
 .clients-link:focus .logo{
     fill: #2196F3;
-}
+} */
 /* ---------------------footer------------------------------------- */
-.basement{
+/* .basement{
     background-color:var(--brend-color);
     padding-top: 60px;
     padding-bottom: 60px;
@@ -528,7 +524,6 @@ img{
     margin-bottom: 9px;
 }
 
-.besement-footer{}
 
 .footer-list{
     display: flex;
@@ -669,18 +664,18 @@ img{
 
 .icone-subscription{
     margin-left: 10px;
-}
+} */
 /* ---------------------------PORTFOLIO-------------------- */
-.content{
+/* .content{
     background-color: var(--second-color);
 }
 
 .section-portfolio{
     padding-top: 94px;
     padding-bottom: 94px;
-}
+} */
 
-.navigation{
+/* .navigation{
     list-style:var(--point) ;
     margin-bottom: 50px ;
     display: flex;
@@ -716,9 +711,9 @@ img{
     background-color: #2196F3;
     color: #FFFFFF;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08);
-}
+} */
 
-.portfolio{
+/* .portfolio{
     list-style:var(--point) ;
     display: flex;
     flex-wrap: wrap;
@@ -806,9 +801,14 @@ img{
     line-height: 1.87;
     letter-spacing: 0.03em;
      color: var(--color-item-tel-mail);
-}
+} */
 
-.backdrop{
+
+
+
+
+/* ---------------------------MODAL_---------------------------------- */
+.backdrop {
     position: fixed;
     top: 0px;
     width: 100%;
@@ -820,9 +820,6 @@ img{
 
 }
 
-
-
-/* ---------------------------MODAL_---------------------------------- */
 .modal{
     position: absolute;
 
