--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,3 +13,8 @@
 
 @import './portfolio/navigationbtn';
 @import './portfolio/content';
+
+@import './modal/backdrop';
+@import './modal/mainmodal';
+@import './modal/checkbox';
+@import './modal/submitbtn';
