--- a/sass/header/_nav.scss
+++ b/sass/header/_nav.scss
@@ -1,81 +1,79 @@
 .nav-logo {
-    font-family: 'Raleway';
-    font-size: 26px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
-    color: #000000;
-    text-decoration: var(--link-decoration);
-    margin-right: 93px;
+  font-family: 'Raleway';
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  color: #000000;
+  text-decoration: var(--link-decoration);
+  margin-right: 93px;
 }
 
 .nav-logo-title {
-    color: #2196F3;
+  color: #2196f3;
 }
 
 .navigation-link {
-
-
-    margin-right: auto;
+  margin-right: auto;
 }
 
 .nav-link {
-    gap: 50px;
-    list-style: var(--point);
-    display: flex;
+  gap: 50px;
+  list-style: var(--point);
+  display: flex;
 }
 
 .link {
-    padding: 32px 0px;
-    position: relative;
+  padding: 32px 0px;
+  position: relative;
 
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    text-decoration: var(--link-decoration);
-    color: #212121;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em
-}
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  text-decoration: var(--link-decoration);
+  color: #212121;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 
-.link:hover,
-.link:focus {
-    color: #2196F3;
+  &:hover,
+  &:focus {
+    color: #2196f3;
+  }
 }
 
 .link-item::after {
-    content: " ";
+  content: ' ';
 
-    position: absolute;
-    left: 0px;
-    bottom: -0.4px;
+  position: absolute;
+  left: 0px;
+  bottom: -0.4px;
 
-    display: block;
-    width: 100%;
-    height: 4px;
-    background-color: #2196F3;
-    border-radius: 2px;
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: #2196f3;
+  border-radius: 2px;
 }
 
 .link-item {
-    color: #2196F3;
+  color: #2196f3;
 }
 
 .link-portfolio::after {
-    content: " ";
+  content: ' ';
 
-    position: absolute;
-    left: 0px;
-    bottom: -0.4px;
+  position: absolute;
+  left: 0px;
+  bottom: -0.4px;
 
-    display: block;
-    width: 100%;
-    height: 4px;
-    background-color: #2196F3;
-    border-radius: 2px;
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: #2196f3;
+  border-radius: 2px;
 }
 
 .link-portfolio {
-    color: #2196F3;
+  color: #2196f3;
 }
