--- a/sass/header/_telmail.scss
+++ b/sass/header/_telmail.scss
@@ -1,68 +1,66 @@
 .link-contact {
-    list-style: var(--point);
-    display: flex;
-
+  list-style: var(--point);
+  display: flex;
 }
 
 .contact {
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    color: var(--color-item-tel-mail);
-    text-decoration: var(--link-decoration);
-    display: flex;
-    align-items: center;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--color-item-tel-mail);
+  text-decoration: var(--link-decoration);
+  display: flex;
+  align-items: center;
+
+  &:hover,
+  &:focus {
+    color: #2196f3;
+  }
+
+  &:hover .envelop {
+    fill: #2196f3;
+  }
+
+  &:focus .envelop {
+    fill: #2196f3;
+  }
 }
 
 .contact .envelop {
-    transition-property: fill;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact .smartphone {
-    transition-property: fill;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.contact:hover,
-.contact:focus {
-    color: #2196F3;
-}
-
-.contact:hover .envelop {
-    fill: #2196F3;
-}
-
-.contact:focus .envelop {
-    fill: #2196F3;
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-mail {
-    margin-right: 30px;
+  margin-right: 30px;
 }
 
 .envelop {
-    margin-right: 10px;
-    fill: #757575;
+  margin-right: 10px;
+  fill: #757575;
 }
 
 .smartphone {
-    fill: #757575;
-    margin-right: 10px;
+  fill: #757575;
+  margin-right: 10px;
 }
 
 .contact-tel:hover .smartphone {
-    fill: #2196F3;
+  fill: #2196f3;
 }
 
 .contact-tel:focus .smartphone {
-    fill: #2196F3;
+  fill: #2196f3;
 }
-
