--- a/sass/main/_clients.scss
+++ b/sass/main/_clients.scss
@@ -37,20 +37,20 @@
   display: flex;
   justify-content: center;
   align-items: center;
-}
 
-.clients-link:hover {
-  border: solid #2196f3;
+  &:hover {
+    border: solid #2196f3;
+  }
+
+  &:hover .logo {
+    fill: #2196f3;
+  }
+
+  &:focus .logo {
+    fill: #2196f3;
+  }
 }
 
 .logo {
   fill: #afb1b8;
-}
-
-.clients-link:hover .logo {
-  fill: #2196f3;
-}
-
-.clients-link:focus .logo {
-  fill: #2196f3;
 }
