--- a/sass/modal/_submitbtn.scss
+++ b/sass/modal/_submitbtn.scss
@@ -17,9 +17,9 @@
   cursor: pointer;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.submit-btn:hover,
-.submit-btn:focus {
-  background-color: #188ce8;
+  &:hover,
+  &:focus {
+    background-color: #188ce8;
+  }
 }
