--- a/css/main.css
+++ b/css/main.css
@@ -102,23 +102,10 @@ body {
   color: #2196f3;
 }
 
-.link-item::after {
-  content: " ";
-  position: absolute;
-  left: 0px;
-  bottom: -0.4px;
-  display: block;
-  width: 100%;
-  height: 4px;
-  background-color: #2196f3;
-  border-radius: 2px;
-}
-
 .link-item {
   color: #2196f3;
 }
-
-.link-portfolio::after {
+.link-item::after {
   content: " ";
   position: absolute;
   left: 0px;
@@ -132,6 +119,17 @@ body {
 
 .link-portfolio {
   color: #2196f3;
+}
+.link-portfolio::after {
+  content: " ";
+  position: absolute;
+  left: 0px;
+  bottom: -0.4px;
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: #2196f3;
+  border-radius: 2px;
 }
 
 .link-contact {
@@ -215,7 +213,7 @@ body {
 .title {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/phototitle.jpg);
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/phototitle.jpg);
-  background-color: #C4C4C4;
+  background-color: #c4c4c4;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -238,7 +236,7 @@ body {
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .btn {
@@ -259,17 +257,15 @@ body {
   letter-spacing: 0.06em;
   border-radius: 4px;
   border: none;
-  color: #FFFFFF;
-  background: #2196F3;
+  color: #ffffff;
+  background: #2196f3;
   cursor: pointer;
   -webkit-transition-duration: 250ms;
           transition-duration: 250ms;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.btn:hover,
-.btn:focus {
+.btn:hover, .btn:focus {
   background-color: #188ce8;
 }
 
@@ -383,7 +379,7 @@ body {
   text-align: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #FFFFFF;
+  color: #ffffff;
   padding-top: 27px;
 }
 
@@ -396,7 +392,7 @@ body {
 }
 
 .player {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   padding-bottom: 30px;
   border-radius: 5px;
 }
@@ -459,12 +455,12 @@ body {
       -ms-flex-align: center;
           align-items: center;
 }
-
-.social-networks {
-  fill: #AFB1B8;
+.networks-player-element:hover, .networks-player-element:focus {
+  background-color: #2196f3;
 }
 
 .social-networks {
+  fill: #afb1b8;
   -webkit-transition-property: fill;
   transition-property: fill;
   -webkit-transition-duration: 250ms;
@@ -472,12 +468,6 @@ body {
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.networks-player-element:hover,
-.networks-player-element:focus {
-  background-color: #2196F3;
-}
-
 .networks-player-element:hover .social-networks {
   -webkit-transition-property: fill;
   transition-property: fill;
@@ -486,11 +476,9 @@ body {
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .networks-player-element:hover .social-networks {
   fill: #ffffff;
 }
-
 .networks-player-element:focus .social-networks {
   fill: #ffffff;
 }
@@ -788,9 +776,7 @@ body {
   border: 0px;
   cursor: pointer;
 }
-
-.navigation-btn:hover,
-.navigation-btn:focus {
+.navigation-btn:hover, .navigation-btn:focus {
   background-color: #2196f3;
   color: #ffffff;
   -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08);
@@ -832,9 +818,7 @@ body {
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.photo:hover,
-.photo:focus {
+.photo:hover, .photo:focus {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -868,7 +852,6 @@ body {
   background: rgba(33, 150, 243, 0.9);
   color: #ffffff;
 }
-
 .photo:hover .text-photo-item {
   -webkit-transform: translateY(0%);
           transform: translateY(0%);
@@ -881,7 +864,6 @@ body {
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .photo:focus .text-photo-item {
   -webkit-transform: translateY(0%);
           transform: translateY(0%);
@@ -1022,6 +1004,20 @@ body {
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
 }
+.forma-contact:hover + .input-icon {
+  fill: #1976d2;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.forma-contact:focus + .input-icon {
+  fill: #1976d2;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .forma-contact {
   width: 100%;
@@ -1031,27 +1027,9 @@ body {
   border-radius: 4px;
   padding-left: 42px;
 }
-
-.forma-contact:hover,
-.forma-contact:focus {
+.forma-contact:hover, .forma-contact:focus {
   border-color: #2196f3;
   outline: #2196f3;
-  -webkit-transition-duration: 250ms;
-          transition-duration: 250ms;
-  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.forma-contact:hover + .input-icon {
-  fill: #1976d2;
-  -webkit-transition-duration: 250ms;
-          transition-duration: 250ms;
-  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.forma-contact:focus + .input-icon {
-  fill: #1976d2;
   -webkit-transition-duration: 250ms;
           transition-duration: 250ms;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -1107,44 +1085,37 @@ body {
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .comment::-webkit-input-placeholder {
   font-size: 12px;
   line-height: 14px;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
 .comment::-moz-placeholder {
   font-size: 12px;
   line-height: 14px;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
 .comment:-ms-input-placeholder {
   font-size: 12px;
   line-height: 14px;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
 .comment::-ms-input-placeholder {
   font-size: 12px;
   line-height: 14px;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
 .comment::placeholder {
   font-size: 12px;
   line-height: 14px;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
-.comment:hover,
-.comment:focus {
+.comment:hover, .comment:focus {
   border-color: #2196f3;
   outline: #2196f3;
   -webkit-transition-duration: 250ms;
@@ -1200,7 +1171,6 @@ body {
           align-items: center;
   fill: transparent;
 }
-
 .checkbox:checked + .checkbox-text span {
   background-color: #2196f3;
   border: none;
@@ -1218,7 +1188,6 @@ body {
   text-decoration: none;
   position: relative;
 }
-
 .checkbox-link::before {
   content: " ";
   position: absolute;
@@ -1253,8 +1222,6 @@ body {
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.submit-btn:hover,
-.submit-btn:focus {
+.submit-btn:hover, .submit-btn:focus {
   background-color: #188ce8;
 }/*# sourceMappingURL=main.css.map */
