--- a/sass/header/_nav.scss
+++ b/sass/header/_nav.scss
@@ -42,38 +42,38 @@
   }
 }
 
-.link-item::after {
-  content: ' ';
-
-  position: absolute;
-  left: 0px;
-  bottom: -0.4px;
-
-  display: block;
-  width: 100%;
-  height: 4px;
-  background-color: #2196f3;
-  border-radius: 2px;
-}
-
 .link-item {
   color: #2196f3;
-}
 
-.link-portfolio::after {
-  content: ' ';
+  &::after {
+    content: ' ';
 
-  position: absolute;
-  left: 0px;
-  bottom: -0.4px;
+    position: absolute;
+    left: 0px;
+    bottom: -0.4px;
 
-  display: block;
-  width: 100%;
-  height: 4px;
-  background-color: #2196f3;
-  border-radius: 2px;
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: #2196f3;
+    border-radius: 2px;
+  }
 }
 
 .link-portfolio {
   color: #2196f3;
+
+  &::after {
+    content: ' ';
+
+    position: absolute;
+    left: 0px;
+    bottom: -0.4px;
+
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: #2196f3;
+    border-radius: 2px;
+  }
 }
