--- a/sass/modal/_checkbox.scss
+++ b/sass/modal/_checkbox.scss
@@ -33,12 +33,12 @@
   justify-content: center;
   align-items: center;
   fill: transparent;
-}
 
-.checkbox:checked + .checkbox-text span {
-  background-color: #2196f3;
-  border: none;
-  fill: #ffffff;
+  .checkbox:checked + & {
+    background-color: #2196f3;
+    border: none;
+    fill: #ffffff;
+  }
 }
 
 .checkbox-link {
@@ -50,17 +50,17 @@
   margin-left: 5px;
   text-decoration: none;
   position: relative;
-}
 
-.checkbox-link::before {
-  content: ' ';
+  &::before {
+    content: ' ';
 
-  position: absolute;
-  left: 0px;
-  bottom: 5.7px;
+    position: absolute;
+    left: 0px;
+    bottom: 5.7px;
 
-  display: block;
-  width: 100%;
-  height: 1px;
-  background-color: #2196f3;
+    display: block;
+    width: 100%;
+    height: 1px;
+    background-color: #2196f3;
+  }
 }
