--- a/sass/portfolio/_navigationbtn.scss
+++ b/sass/portfolio/_navigationbtn.scss
@@ -27,11 +27,11 @@
   border-radius: 4px;
   border: 0px;
   cursor: pointer;
-}
 
-.navigation-btn:hover,
-.navigation-btn:focus {
-  background-color: #2196f3;
-  color: #ffffff;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08);
+  &:hover,
+  &:focus {
+    background-color: #2196f3;
+    color: #ffffff;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08);
+  }
 }
