--- a/sass/header/_telmail.scss
+++ b/sass/header/_telmail.scss
@@ -3,7 +3,7 @@
   display: flex;
 }
 
-.contact {
+.contacts__contact {
   transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -22,45 +22,45 @@
     color: #2196f3;
   }
 
-  &:hover .envelop {
+  &:hover .contacts__envelop {
     fill: #2196f3;
   }
 
-  &:focus .envelop {
+  &:focus .contacts__envelop {
     fill: #2196f3;
   }
 }
 
-.contact .envelop {
+.contacts__contact .contacts__envelop {
   transition-property: fill;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact .smartphone {
+.contacts__contact .contacts__smartphone {
   transition-property: fill;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contacts__envelop {
+  margin-right: 10px;
+  fill: #757575;
+}
+
+.contacts__smartphone {
+  fill: #757575;
+  margin-right: 10px;
+}
+
+.contact-tel:hover .contacts__smartphone {
+  fill: #2196f3;
+}
+
+.contact-tel:focus .contacts__smartphone {
+  fill: #2196f3;
 }
 
 .contact-mail {
   margin-right: 30px;
-}
-
-.envelop {
-  margin-right: 10px;
-  fill: #757575;
-}
-
-.smartphone {
-  fill: #757575;
-  margin-right: 10px;
-}
-
-.contact-tel:hover .smartphone {
-  fill: #2196f3;
-}
-
-.contact-tel:focus .smartphone {
-  fill: #2196f3;
 }
