--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import './utils/variables';
 
+@import './header/logo';
 @import './header/mainheader';
 @import './header/nav';
 @import './header/telmail';
