--- a/sass/main/_title.scss
+++ b/sass/main/_title.scss
@@ -11,12 +11,12 @@
   padding-bottom: 200px;
 }
 
-.container-title {
+.title__container-title {
   padding: 0px;
   max-width: 696px;
 }
 
-.title-header {
+.title__header {
   margin-bottom: 35px;
 
   font-weight: 900;
@@ -28,7 +28,7 @@
   color: #ffffff;
 }
 
-.btn {
+.title__btn {
   display: block;
   margin: 0 auto;
   padding-top: 10px;
