--- a/sass/main/_benefits.scss
+++ b/sass/main/_benefits.scss
@@ -4,11 +4,6 @@
   padding-bottom: 94px;
 }
 
-.benefits-list {
-  display: flex;
-  gap: 30px;
-}
-
 .caption {
   position: absolute;
   width: 1px;
@@ -22,7 +17,12 @@
   overflow: hidden;
 }
 
-.icons {
+.benefits-list {
+  display: flex;
+  gap: 30px;
+}
+
+.benefits-list__icons {
   width: 270px;
   height: 120px;
   background-color: #f5f4fa;
@@ -33,12 +33,12 @@
   justify-content: center;
 }
 
-.item {
+.benefits-list__item {
   list-style: var(--point);
   flex-basis: calc((100% - 90px) / 4);
 }
 
-.item-header {
+.benefits-list__item-header {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
@@ -46,7 +46,7 @@
   margin-bottom: 10px;
 }
 
-.text {
+.benefits-list__text {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
