--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,7 @@
 
 @import './main/title';
 @import './main/benefits';
+@import './main/_works';
 @import './main/team';
 @import './main/clients';
 
